--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@catena-x/portal-shared-components",
-  "version": "3.7.3",
+  "name": "portal-shared-components",
+  "version": "3.7.4",
   "description": "Catena-X Portal Shared Components",
   "author": "Catena-X Contributors",
   "license": "Apache-2.0",
@@ -12,7 +12,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/eclipse-tractusx/portal-shared-components.git"
+    "url": "https://github.com/Usmanfee/Cofinity-Design-System.git"
   },
   "publishConfig": {
     "access": "public"
